# conversation-agent

./: .gitignore  README.md  pyproject.toml
data/: rag_corpus.json
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.svelte  App.test.js  app.css
frontend/src/__tests__/: setup.js
frontend/src/components/: ChatInput.svelte  ChatInput.test.js  ChatMessage.svelte  ChatMessage.test.js  FormField.svelte  FormField.test.js  FormSection.svelte  FormSection.test.js  SidePanel.svelte  SidePanel.test.js  SourceList.svelte  SourceList.test.js  StepProgress.svelte  StepProgress.test.js  TypingIndicator.svelte  TypingIndicator.test.js
frontend/src/lib/: api.js  api.test.js  fieldDefinitions.js  fieldDefinitions.test.js  stateApi.js  stateApi.test.js
src/conversation_agent/: agent.py  app.py  models.py  rag.py  session.py
static/: app.js  index.html
tests/: conftest.py  test_chat.py  test_models.py  test_rag.py  test_state.py
